# royalnet-5

./: .gitattributes  .gitignore  .sentryclirc  README.md  SECURITY.md  TODO.md  application.wsgi  awardfiorygi.py  bots.py  cast.py  chatasthebot.py  connect_to_main_server.bat  data.txt  db.py  dirty.py  discordbot.py  errors.py  flaskserver.py  isaacfetcher.py  loldata.py  newuser.py  ohciaovedochestaileggendoilmiostato.py  owlcaptain.py  publish.bat  pyproject.toml  query_discord_music.py  redditbot.py  requirements.txt  rocket_league.py  royalgames.py  sample_config.toml  setup.py  sql_queries.py  stagismo.py  statsupdate.py  statsupdater.py  steam.py  strings.py  telebot.py  telegrambot.py  (+8 more)
.github/: main.workflow
.github/workflows/: check.yml  publish.yml
docs/: README.md  audio.rst  bots.rst  commands.rst  conf.py  database.rst  index.html  index.rst  network.rst  utils.rst
docs_source/: apireference.rst  audio.rst  bots.rst  conf.py  creatingacommand.rst  index.rst  make.bat  network.rst  randomdiscoveries.rst  runningroyalnet.rst  utils.rst  web.rst
pycharm_templates/: apistar.vm  command.vm  event.vm  table.vm
royalnet/: __init__.py  __main__.py  configurator.py  error.py  generate.py  royalgames.py  royalgamesweb.py  run.py  shareradio.py  version.py
static/: nryg.css  nryg.less  owl.less  pygments.css  royal.css  spoopy.less
templates/: 400.html  403.html  500.html  README.md  activity.html  base.html  brawlhalla.html  challenge1.html  diario.html  game.html  index.html  leaderboards.html  login.html  main.htm  main.html  music.html  ohciaodinuovo.html  owlcaptain.html  password.html  profile.html  profileedit.html  ritual.html  rl_table.htm  setcss.html  table.htm  topsongs.html  wiki.html  wikihome.html  wikilist.html  wikipage.html
tests/: test_network.py
utils/: __init__.py  cast.py  dirty.py  emojify.py  errors.py  mmstatus.py  stagismo.py  telegramstuff.py
(+429 files in other folders)
