[tool.poetry]
name = "royalnet"
version = "5.1a1"
description = "A multipurpose bot and web framework"
authors = ["Stefano Pigozzi <ste.pigozzi@gmail.com>"]
license = "AGPL-3.0+"
readme = "README.md"
homepage = "https://github.com/Steffo99/royalnet"
documentation = "https://gh.steffo.eu/royalnet/"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)"
]

# Library dependencies
[tool.poetry.dependencies]
python = "^3.8"

dateparser = "^0.7.2"

python_telegram_bot = {version="^12.2.0", optional=true}

discord_py = {git = "https://github.com/Rapptz/discord.py", optional=true}  # discord.py 1.2.4 is missing Go Live related methods
pynacl = {version="^1.3.0", optional=true}  # This requires libffi-dev and python3.*-dev to be installed on Linux systems

ffmpeg_python = {version="~0.2.0", optional=true}
youtube_dl = {version="*", optional=true}

sqlalchemy = {version="^1.3.10", optional=true}

psycopg2 = {version="^2.8.4", optional=true}  # Requires quite a bit of stuff http://initd.org/psycopg/docs/install.html#install-from-source
psycopg2_binary = {version="^2.8.4", optional=true}  # Prebuilt alternative to psycopg2, not recommended

starlette = {version="0.12.13", optional=true}

# Optional dependencies
[tool.poetry.extras]
telegram = ["python_telegram_bot"]
discord = ["discord_py", "pynacl"]
alchemy_easy = ["sqlalchemy", "psycopg2_binary"]
alchemy_hard = ["sqlalchemy", "psycopg2"]
bard = ["ffmpeg_python", "youtube_dl"]
constellation = ["starlette"]

# Development dependencies
[tool.poetry.dev-dependencies]
pytest = "^5.2.2"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
